chrome/userContent.css
/*                       */
/*    USERCONTENT.CSS    */
/*                       */

@namespace url("http://www.w3.org/1999/xhtml");

:root {
    scrollbar-color: #333 #888 !important;
    scrollbar-width: thin !important;
}

* {
    scrollbar-width: thin !important;
}

@-moz-document url("about:home"),
url("about:blank"),
url("about:newtab"),
url("about:privatebrowsing") {

    html:not(#ublock0-epicker),
    html:not(#ublock0-epicker) body,
    #newtab-customize-overlay {
        background-color: #181818 !important
    }

    .title,
    .section-title span,
    .topic,
    .edit-topsites-wrapper .edit-topsites-button button {
        color: #FFF !important;
        /*title color */
    }

    .section-title span,
    .prefs-pane-button button {
        fill: #FFF !important;
    }

    .topic .topic-link,
    .topic .topic-read-more {
        color: #FFF !important;
        /*text color */
    }

    .collapsible-section.active {
        background-color: transparent !important;
    }

    .collapsible-section .section-top-bar .context-menu-button {
        opacity: 0.5 !important;
        transition: opacity .2s ease-out;
        -moz-transition: opacity .2s ease-out;
    }

    .collapsible-section.active .section-top-bar .context-menu-button {
        fill: #FFF !important;
    }

    .prefs-button button {
        fill: #FFF !important;
        opacity: 0.5 !important;
        transition: opacity .2s ease-out;
        -moz-transition: opacity .2s ease-out;
    }

    .prefs-button button:hover,
    .prefs-button button:focus {
        background-color: inherit !important;
        opacity: 1.0 !important;
        transition: opacity .2s ease-in;
        -moz-transition: opacity .2s ease-in;
    }

    .sections-list .section-empty-state .empty-state .empty-state-icon {
        fill: #DDD !important;
    }

    .empty-state-message {
        color: #DDD !important;
    }
}

/*
html#ublock0-epicker,
#ublock0-epicker body {
    background: transparent !important;
    color: black !important;
    font: 12px sans-serif !important;
    height: 100% !important;
    margin: 0 !important;
    overflow: hidden !important;
    width: 100% !important;
} */

